<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListOfCars</string>
    <string name="car_add">Add</string>
    <string name="car_search">Search</string>
    <string name="car_edit">Edit</string>
    <string name="car_delete">Delete</string>
    <string name="car_name">Car name:</string>
    <string name="add_car_info">Add car info</string>
    <string name="add_button">Add</string>
    <string name="car_make">Make:</string>
    <string name="car_model">Model:</string>
    <string name="car_pro_year">Production year:</string>
    <string name="car_color">Color:</string>
    <string name="edit_car_info">Edit car info</string>
    <string name="car_changes_save">Save</string>
    <string name="title_activity_test">test</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="no_match">No match</string>
    <string name="query_hint">Some car info </string>
    <string name="share">Share</string>
    <string name="car_info">Car Info</string>
</resources>
