<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/car_info"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/car_name"/>
    <TextView
        android:id="@+id/car_name_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/car_make"
        />
    <TextView
        android:id="@+id/car_make_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/car_model"
        />
    <TextView
        android:id="@+id/car_model_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/car_pro_year"
        />
    <TextView
        android:id="@+id/car_prod_year_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/car_color"
        />
    <TextView
        android:id="@+id/car_color_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
         />

</LinearLayout>